# HUMAC

./: .gitignore  README.md
Real-World/: README.md  requirement.txt
Simulation/: README.md
Simulation/crew-algorithms/: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
Simulation/crew-algorithms/.github/workflows/: ci.yml
Simulation/crew-algorithms/crew_algorithms/: collect_data.py  models.py  random_seed.txt  test.py
Simulation/crew-algorithms/crew_algorithms/collect_data/: __main__.py  utils.py
Simulation/crew-algorithms/crew_algorithms/conf/: Build.yaml
Simulation/crew-algorithms/crew_algorithms/conf/envs/: hide_and_seek.yaml
Simulation/crew-algorithms/crew_algorithms/envs/: configs.py  unity.py
Simulation/crew-algorithms/crew_algorithms/envs/channels/: __init__.py  hide_and_seek_event_channel.py  written_feedback_channel.py
Simulation/crew-algorithms/crew_algorithms/outputs/2024-09-26/14-26-15/.hydra/: hydra.yaml  overrides.yaml
Simulation/crew-algorithms/crew_algorithms/outputs/2024-09-26/14-26-39/.hydra/: hydra.yaml
Simulation/crew-algorithms/crew_algorithms/outputs/2024-09-26/14-26-55/.hydra/: hydra.yaml
Simulation/crew-algorithms/crew_algorithms/outputs/2024-09-26/14-35-26/.hydra/: hydra.yaml
Simulation/crew-algorithms/crew_algorithms/outputs/2024-09-26/14-36-06/.hydra/: hydra.yaml
Simulation/crew-algorithms/crew_algorithms/test/: __main__.py  utils.py
Simulation/crew-algorithms/crew_algorithms/utils/: common_utils.py  rl_utils.py  transforms.py  wandb_utils.py
Simulation/crew-algorithms/docs/: deep_coach.rst  index.rst
(+440 files in other folders)
